--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,5 +1,6 @@
 FROM php:7.4-fpm-alpine
 
+LABEL maintainer="Katie Schuler <kathryn.schuler@gmail.com>"
 
 ADD ./www.conf /usr/local/etc/php-fpm.d/www.conf
 COPY --from=composer:latest /usr/bin/composer /usr/local/bin/composer
