--- a/rstudio/Dockerfile
+++ b/rstudio/Dockerfile
@@ -1,4 +1,4 @@
-ARG BASE_CONTAINER=rocker/verse:4.0.4
+ARG BASE_CONTAINER=rocker/verse:4.0.3
 FROM $BASE_CONTAINER
 
 LABEL maintainer="Katie Schuler <kathryn.schuler@gmail.com>"
@@ -9,14 +9,15 @@ USER root
 # get postgres prereqs
 RUN apt-get update && \
     apt-get install -y libpq-dev && \
-    apt-get clean && rm -rf /var/lib/apt/lists/*
+    apt-get clean && rm -rf /var/lib/apt/lists/* 
 
-# includes some R and python packages with the build
+# change repo back to cran
+RUN echo "options(repos = c(CRAN = 'https://cran.rstudio.com/'), download.file.method = 'libcurl')" >> /usr/local/lib/R/etc/Rprofile.site
+
+# install more packages that we like to have
 RUN install2.r --error \
-    --deps TRUE \   
     infotheo \
     lme4 \
-    RpostgreSQL \
-    getpass \
-    gridextra \
-    stringdist 
+    RPostgreSQL \
+    getPass \
+    gridExtra 
