--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -4,7 +4,7 @@ FROM $BASE_CONTAINER
 
 LABEL maintainer="Katie Schuler <kathryn.schuler@gmail.com>"
 
-
+# as the root user
 USER root
 
 # get postgres prereqs
@@ -12,9 +12,13 @@ RUN apt-get update && \
     apt-get install -y libpq-dev && \
     apt-get clean && rm -rf /var/lib/apt/lists/*
 
+# if not available on conda, install to r
+RUN R -e "install.packages('tidyjson', repos='http://cran.rstudio.com/')"
+
+# ad the notebook user
 USER $NB_UID 
 
-# includes some R and python packages with the build
+# install some R packages with conda (preferred for jupyter)
 RUN conda install --quiet --yes \
     'r-infotheo=1.2.0' \
     'r-lme4=1.1*' \
